--- a/project05_cvPanel/applications.html
+++ b/project05_cvPanel/applications.html
@@ -74,58 +74,72 @@
 
     <!-- MAIN -->
     <main>
-        <div class="projectCards text-center">
+        <div class="projectCards text-center row row-cols-1 row-cols-md-2 g-4">
 
-            <div class="card" style="width: 18rem;">
-                <img src="images/contact.png" class="card-img-top" alt="Contact Page">
-                <div class="card-body">
-                    <h5 class="card-title">Contact Page</h5>
-                    <p class="card-text">
-                        This is a project making just using JS and Bootstrap 5. You can easily add the person to your
-                        contact and able to update their information.
-                    </p>
-                    <button class="btn btn-outline-success" onclick="openModalProjects('p1')">Run the Project</button>
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/contact.png" class="card-img-top" alt="Contact Page">
                     <div class="card-body">
-                        <a href="#" class="card-link">Source Code</a>
+                        <h5 class="card-title">Contact Page</h5>
+                        <p class="card-text">
+                            This is a project making just using JS and Bootstrap 5. You can easily add the person to
+                            your
+                            contact and able to update their information.
+                        </p>
+                        <button class="btn btn-outline-success" onclick="openModalProjects('p1')">Run the
+                            Project</button>
+                        <div class="card-body">
+                            <a href="#" class="card-link">Source Code</a>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="card" style="width: 18rem;">
-                <img src="images/contactAPI.png" class="card-img-top" alt="Contact API Page">
-                <div class="card-body">
-                    <h5 class="card-title">Contact API Page</h5>
-                    <p class="card-text">Same as the Contact Page but using API instead of JS</p>
-                    <button class="btn btn-outline-success" onclick="openModalProjects('p2')">Run the Project</button>
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/contactAPI.png" class="card-img-top" alt="Contact API Page">
                     <div class="card-body">
-                        <a href="#" class="card-link">Source Code</a>
+                        <h5 class="card-title">Contact API Page</h5>
+                        <p class="card-text">Same as the Contact Page but using API instead of JS</p>
+                        <button class="btn btn-outline-success" onclick="openModalProjects('p2')">Run the
+                            Project</button>
+                        <div class="card-body">
+                            <a href="#" class="card-link">Source Code</a>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="card" style="width: 18rem;">
-                <img src="images/yazboz.png" class="card-img-top" alt="Yaz Boz Page">
-                <div class="card-body">
-                    <h5 class="card-title">OKEY Result Page</h5>
-                    <p class="card-text">This is a OKEY game result sheet. Using JS and Bootstrap 5</p>
-                    <button class="btn btn-outline-success" onclick="openModalProjects('p3')">Run the Project</button>
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/yazboz.png" class="card-img-top" alt="Yaz Boz Page">
                     <div class="card-body">
-                        <a href="#" class="card-link">Source Code</a>
+                        <h5 class="card-title">OKEY Result Page</h5>
+                        <p class="card-text">This is a OKEY game result sheet. Using JS and Bootstrap 5</p>
+                        <button class="btn btn-outline-success" onclick="openModalProjects('p3')">Run the
+                            Project</button>
+                        <div class="card-body">
+                            <a href="#" class="card-link">Source Code</a>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="card" style="width: 18rem;">
-                <img src="images/coin.png" class="card-img-top" alt="Coin Page">
-                <div class="card-body">
-                    <h5 class="card-title">Coin Exchange Page</h5>
-                    <p class="card-text">You can trade on three coins. These are BTC, ETC, and ADA.</p>
-                    <button class="btn btn-outline-success" onclick="openModalProjects('p4')">Run the Project</button>
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/coin.png" class="card-img-top" alt="Coin Page">
                     <div class="card-body">
-                        <a href="#" class="card-link">Source Code</a>
+                        <h5 class="card-title">Coin Exchange Page</h5>
+                        <p class="card-text">You can trade on three coins. These are BTC, ETC, and ADA.</p>
+                        <button class="btn btn-outline-success" onclick="openModalProjects('p4')">Run the
+                            Project</button>
+                        <div class="card-body">
+                            <a href="#" class="card-link">Source Code</a>
+                        </div>
                     </div>
                 </div>
             </div>
+
         </div>
 
 
