--- a/project05_cvPanel/applications.html
+++ b/project05_cvPanel/applications.html
@@ -20,6 +20,7 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!-- Sweet alert src -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="application.js"></script>
 
 
 </head>
@@ -76,7 +77,7 @@
     <main>
         <div class="projectCards text-center row row-cols-1 row-cols-md-2 g-4">
 
-            <div class="col">
+            <div class="col-9">
                 <div class="card" style="width: 18rem;">
                     <img src="images/contact.png" class="card-img-top" alt="Contact Page">
                     <div class="card-body">
@@ -95,7 +96,7 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col-9">
                 <div class="card" style="width: 18rem;">
                     <img src="images/contactAPI.png" class="card-img-top" alt="Contact API Page">
                     <div class="card-body">
@@ -110,7 +111,7 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col-9">
                 <div class="card" style="width: 18rem;">
                     <img src="images/yazboz.png" class="card-img-top" alt="Yaz Boz Page">
                     <div class="card-body">
@@ -125,7 +126,7 @@
                 </div>
             </div>
 
-            <div class="col">
+            <div class="col-9">
                 <div class="card" style="width: 18rem;">
                     <img src="images/coin.png" class="card-img-top" alt="Coin Page">
                     <div class="card-body">
@@ -176,51 +177,7 @@
     </footer>
 
 
-    <script>
 
-        function openModalProjects(pNum) {
-            // Modals open
-            $('#staticBackdrop').modal('show');
-            switch (pNum) {
-                case 'p1':
-                    $('#modalBody').html(
-                        '<div class="text-center">' +
-                        '<iframe src="../Project01_ResponsePage/response.html" width="1040px" height="840px" allowfullscreen></iframe>' +
-                        '</div>'
-                    );
-                    break;
-
-                case 'p2':
-                    $('#modalBody').html(
-                        '<div class="text-center">' +
-                        '<iframe src="../project03_ResponsePageAPI/index.html" width="1040px" height="840px" allowfullscreen></iframe>' +
-                        '</div>'
-                    );
-                    break;
-
-                case 'p3':
-                    $('#modalBody').html(
-                        '<div class="text-center">' +
-                        '<iframe src="../Project02_SingleGamePage/index.html" width="1040px" height="840px" allowfullscreen></iframe>' +
-                        '</div>'
-                    );
-                    break;
-
-                case 'p4':
-                    $('#modalBody').html(
-                        '<div class="text-center">' +
-                        '<iframe src="../project04_coin/index.html" width="1040px" height="840px" allowfullscreen></iframe>' +
-                        '</div>'
-                    );
-                    break;
-
-                default:
-                    swal("Error!", "Error in Open Modal Function", "error");
-                    break;
-            }
-        }
-
-    </script>
 </body>
 
 </html>
