--- a/project05_cvPanel/index.html
+++ b/project05_cvPanel/index.html
@@ -20,6 +20,7 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!-- Sweet alert src -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -72,6 +73,76 @@
 
     <!-- MAIN -->
     <main>
+
+        <div class="carouselDiv">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active imgDiv">
+                        <img src="images/pp.jpeg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h4>WELCOME</h4>
+                            <h2>ALPEREN KAÇMAZ</h2>
+                            <hr>
+                            <p>WEB DEV - AI DEV - SEMI-PRO GAMER</p>
+                            <a href="">Facebook Icon</a>
+                            <a href="">Github Icon</a>
+                            <a href="">linkedin Icon</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/1099539.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Some representative placeholder content for the second slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/679478.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the third slide.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+
+        <div class="aboutMe">
+            <div>
+                <h2 class="text-center">About Me</h2>
+            </div>
+            <div>
+                <h4 class="text-center">I'm Alperen Kaçmaz, Web Developer, AI Developer and OOP Designer</h4>
+            </div>
+            <div>
+                <p class="text-sm-start">
+                    I am a junior at Akdeniz University Computer Science and Engineering Department. I
+                    am interested in Game Development. I usually develop my projects in Java and Python languages and I
+                    develop for Android and
+                    web environments. Also, I am working with the OOP model. I am currently improving my skills in C#,
+                    Python, and PHP and interested in AI technologies. I'm a semi-professional gamer
+                </p>
+            </div>
+        </div>
+
 
     </main>
 
