--- a/project05_cvPanel/applications.html
+++ b/project05_cvPanel/applications.html
@@ -52,7 +52,7 @@
                             Informations
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">CV</a></li>
+                            <li><a class="dropdown-item" href="cv.html">CV</a></li>
                             <li><a class="dropdown-item" href="#">Useful Links</a></li>
                             <li><a class="dropdown-item" href="#">Videos</a></li>
                             <li>
