--- a/project05_cvPanel/index.html
+++ b/project05_cvPanel/index.html
@@ -31,7 +31,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Home</a>
+            <a class="navbar-brand active" href="index.html">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false">
                 <span class="navbar-toggler-icon"></span>
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" href="applications.html">Applications</a>
+                        <a class="nav-link" href="applications.html">Applications</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Links</a>
@@ -50,7 +50,7 @@
                             Informations
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">CV</a></li>
+                            <li><a class="dropdown-item" href="cv.html">CV</a></li>
                             <li><a class="dropdown-item" href="#">Useful Links</a></li>
                             <li><a class="dropdown-item" href="#">Videos</a></li>
                             <li>
