--- a/project05_cvPanel/applications.html
+++ b/project05_cvPanel/applications.html
@@ -54,7 +54,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="cv.html">CV</a></li>
                             <li><a class="dropdown-item" href="#">Useful Links</a></li>
-                            <li><a class="dropdown-item" href="#">Videos</a></li>
+                            <li><a class="dropdown-item" href="videos.html">Videos</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
