--- a/project05_cvPanel/cv.html
+++ b/project05_cvPanel/cv.html
@@ -49,10 +49,10 @@
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Informations
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu active" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item active" href="cv.html">CV</a></li>
                             <li><a class="dropdown-item" href="#">Useful Links</a></li>
-                            <li><a class="dropdown-item" href="#">Videos</a></li>
+                            <li><a class="dropdown-item" href="videos.html">Videos</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -76,28 +76,28 @@
         <!-- P.I. -->
         <div class="imagePart bg-secondary bg-gradient text-dark row">
 
-            <div class="image col-4">
+            <div class="image bg-secondary col-4">
                 IMAGE
             </div>
 
-            <div class="infoPart col-8">
-                <ul class="list-group list-group-flush asd">
+            <div class="infoPart bg-secondary col-8">
+                <ul class="list-group list-group-flush bg-secondary">
                     <!-- Name -->
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-secondary">
                         Alperen Kaçmaz
                     </li>
 
                     <!-- Job -->
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-secondary">
                         Intern at <a class="text-decoration-none" href="https://www.proxolab.com/"
                             target="_blank">Proxolab</a>
                     </li>
 
                     <!-- Contact -->
-                    <li class="list-group-item">
-                        <ul class="list-group list-group-horizontal">
+                    <li class="list-group-item bg-secondary">
+                        <ul class="list-group list-group-horizontal bg-secondary">
                             <!-- Location -->
-                            <li class="list-group-item">
+                            <li class="list-group-item bg-secondary">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                     class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
                                     <path
@@ -108,7 +108,7 @@
                                     target="_blank">Location</a>
                             </li>
                             <!-- Mail -->
-                            <li class="list-group-item">
+                            <li class="list-group-item bg-secondary">
                                 <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                         class="bi bi-envelope-fill" viewBox="0 0 16 16">
                                         <path
@@ -117,7 +117,7 @@
                                         alperen703.akm@gmail.com</a></p>
                             </li>
                             <!-- Phone -->
-                            <li class="list-group-item">
+                            <li class="list-group-item bg-secondary">
                                 <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                         class="bi bi-telephone-plus-fill" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd"
@@ -126,7 +126,7 @@
                                 </p>
                             </li>
                             <!-- Download CV -->
-                            <li class="list-group-item">
+                            <li class="list-group-item bg-secondary">
                                 <p>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                         class="bi bi-file-earmark-person-fill" viewBox="0 0 16 16">
@@ -141,7 +141,7 @@
                     </li>
 
                     <!-- Information -->
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-secondary">
                         I am a junior at Akdeniz University Computer Science and Engineering Department. I am interested
                         in Game Development. I usually develop my projects in Java and Python languages and I develop
                         for Android and web environments. Also, I am working with the OOP model. I am currently
