--- a/project05_cvPanel/currentProjects.html
+++ b/project05_cvPanel/currentProjects.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="header.html">
-    <title>Videos</title>
+    <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
@@ -21,6 +21,8 @@
     <!-- Sweet alert src -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="http://gist-it.appspot.com/http://github.com/$file"></script>
+
 </head>
 
 <body>
@@ -51,11 +53,11 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="cv.html">CV</a></li>
-                            <li><a class="dropdown-item active" href="videos.html">Videos</a></li>
+                            <li><a class="dropdown-item" href="videos.html">Videos</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="currentProjects.html">Current Projects</a></li>
+                            <li><a class="dropdown-item active" href="currentProjects.html">Current Projects</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -73,37 +75,14 @@
     <!-- MAIN -->
     <main>
 
-        <div class="youtubeVideos">
-            <div class="row text-center">
-                <div class="col-6">
-
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W4A_E0qOiXQ?start=122"
-                            title="YouTube video player"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-
+        <div class="row">
+            <div class="col-6">
+                <div class="github-card" data-github="MrKacmaz" data-width="400" data-height="" data-theme="medium">
                 </div>
-
-                <div class="col-6">
-
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9ZI-VOhUgLs"
-                            title="YouTube video player"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
-
-                <div class="col-6">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WGgHLTSWcoE"
-                            title="YouTube video player"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                </div>
+                <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+            </div>
+            <div class="col-6">
+                <script src="https://gist.github.com/MrKacmaz/beeaecf656839e9dfdb7e327a51f2b96.js"></script>
             </div>
         </div>
 
