--- a/project05_cvPanel/index.html
+++ b/project05_cvPanel/index.html
@@ -51,12 +51,11 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="cv.html">CV</a></li>
-                            <li><a class="dropdown-item" href="#">Useful Links</a></li>
                             <li><a class="dropdown-item" href="videos.html">Videos</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Current Projects</a></li>
+                            <li><a class="dropdown-item" href="currentProjects.html">Current Projects</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
