--- a/project05_cvPanel/applications.html
+++ b/project05_cvPanel/applications.html
@@ -20,7 +20,10 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!-- Sweet alert src -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+    <!-- CONFIG -->
     <script src="application.js"></script>
+    <link rel="stylesheet" href="css/application.css">
 
 
 </head>
@@ -86,8 +89,9 @@
                             your
                             contact and able to update their information.
                         </p>
-                        <button class="btn btn-outline-success" onclick="openModalProjects('p1')">Run the
-                            Project</button>
+                        <button class="btn btn-outline-success" onclick="openModalProjects('p1')">
+                            <a href="">Run the Project</a>
+                        </button>
                         <div class="card-body">
                             <a href="#" class="card-link">Source Code</a>
                         </div>
