--- a/project05_cvPanel/cv.html
+++ b/project05_cvPanel/cv.html
@@ -20,7 +20,7 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!-- Sweet alert src -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/cv.css">
 </head>
 
 <body>
@@ -73,30 +73,30 @@
     <!-- MAIN -->
     <main>
         <!-- P.I. -->
-        <div class="imagePart bg-secondary bg-gradient text-dark row">
+        <div class="imagePart text-dark row">
 
-            <div class="image bg-secondary col-4">
-                IMAGE
+            <div class="image col-4">
+                <img src="images/pp_1.jpeg" class="d-block w-75" alt="...">
             </div>
 
-            <div class="infoPart bg-secondary col-8">
-                <ul class="list-group list-group-flush bg-secondary">
+            <div class="infoPart col-8">
+                <ul class="list-group list-group-flush">
                     <!-- Name -->
-                    <li class="list-group-item bg-secondary">
+                    <li class="list-group-item bckgrnd">
                         Alperen Kaçmaz
                     </li>
 
                     <!-- Job -->
-                    <li class="list-group-item bg-secondary">
+                    <li class="list-group-item bckgrnd">
                         Intern at <a class="text-decoration-none" href="https://www.proxolab.com/"
                             target="_blank">Proxolab</a>
                     </li>
 
                     <!-- Contact -->
-                    <li class="list-group-item bg-secondary">
-                        <ul class="list-group list-group-horizontal bg-secondary">
+                    <li class="list-group-item bckgrnd">
+                        <ul class="list-group list-group-horizontal">
                             <!-- Location -->
-                            <li class="list-group-item bg-secondary">
+                            <li class="list-group-item">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                     class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
                                     <path
@@ -107,7 +107,7 @@
                                     target="_blank">Location</a>
                             </li>
                             <!-- Mail -->
-                            <li class="list-group-item bg-secondary">
+                            <li class="list-group-item">
                                 <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                         class="bi bi-envelope-fill" viewBox="0 0 16 16">
                                         <path
@@ -116,7 +116,7 @@
                                         alperen703.akm@gmail.com</a></p>
                             </li>
                             <!-- Phone -->
-                            <li class="list-group-item bg-secondary">
+                            <li class="list-group-item">
                                 <p><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                         class="bi bi-telephone-plus-fill" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd"
@@ -125,7 +125,7 @@
                                 </p>
                             </li>
                             <!-- Download CV -->
-                            <li class="list-group-item bg-secondary">
+                            <li class="list-group-item">
                                 <p>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                                         class="bi bi-file-earmark-person-fill" viewBox="0 0 16 16">
@@ -140,7 +140,7 @@
                     </li>
 
                     <!-- Information -->
-                    <li class="list-group-item bg-secondary">
+                    <li class="list-group-item bckgrnd">
                         I am a junior at Akdeniz University Computer Science and Engineering Department. I am interested
                         in Game Development. I usually develop my projects in Java and Python languages and I develop
                         for Android and web environments. Also, I am working with the OOP model. I am currently
@@ -151,12 +151,11 @@
 
         </div>
 
-        <br>
-        <hr><br>
+        <div class="mustBeBlok"></div>
 
         <!-- EXPERIENCE -->
-        <div class="expreiencePart bg-secondary bg-gradient row">
-            <div class="bg-secondary bg-gradient datesAndex col-8">
+        <div class="expreiencePart row">
+            <div class="datesAndex col-8">
                 <!-- First Experience -->
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
@@ -246,51 +245,50 @@
                 </ul>
             </div>
 
-            <div class="bg-secondary bg-gradient col-4 text-center">EXPERIENCE (Total: ~1 year)</div>
+            <div class="col-4 text-center">EXPERIENCE (Total: ~1 year)</div>
 
         </div>
 
-        <br>
-        <hr><br>
+        <div class="mustBeBlok"></div>
 
         <!-- EDUCATION -->
         <div class="educationPart row">
-            <div class="col-4">
+            <div class="col-4 bckgrnd2">
                 EDUCATION
             </div>
-            <div class="col-8">
+            <div class="col-8 bckgrnd2">
 
                 <!-- University -->
-                <ul class="list-group list-group-horizontal">
-                    <div class="row">
-                        <li class="list-group-item col-7">
+                <ul class="list-group list-group-horizontal bckgrnd2">
+                    <div class="row bckgrnd2">
+                        <li class="list-group-item col-7 bckgrnd2">
                             <p class="text-center"> 09.2017- ~ Faculty of Engineering - Computer Engineering
                                 Akdeniz
                                 University
                             </p>
                         </li>
-                        <li class="list-group-item col-2">~ / 4.00</li>
-                        <li class="list-group-item col-3">Antalya, Turkey</li>
+                        <li class="list-group-item col-2 bckgrnd2">~ / 4.00</li>
+                        <li class="list-group-item col-3 bckgrnd2">Antalya, Turkey</li>
                     </div>
                 </ul>
 
                 <!-- High School -->
-                <ul class="list-group list-group-horizontal">
-                    <div class="row">
-                        <li class="list-group-item col-7">
+                <ul class="list-group list-group-horizontal bckgrnd2">
+                    <div class="row bckgrnd2">
+                        <li class="list-group-item col-7 bckgrnd2">
                             <p class="text-center"> 09.2013-06.2017 Anatolian High School Hasan Tekin Ada Anatolian High
                                 School
                             </p>
                         </li>
-                        <li class="list-group-item col-2">92 / 100</li>
-                        <li class="list-group-item col-3">Denizli, Turkey</li>
+                        <li class="list-group-item col-2 bckgrnd2">92 / 100</li>
+                        <li class="list-group-item col-3 bckgrnd2">Denizli, Turkey</li>
                     </div>
                 </ul>
             </div>
         </div>
 
-        <br>
-        <hr><br>
+        <div class="mustBeBlok"></div>
+
 
         <!-- CAPABILITIES / COMPETENCES  -->
         <div class="capabilities row">
@@ -330,41 +328,40 @@
             </div>
         </div>
 
-        <br>
-        <hr><br>
+        <div class="mustBeBlok"></div>
 
         <!-- SEMINARS & CERTIFICATES -->
-        <div class="certificate row">
-            <div class="col-4">
+        <div class="certificate row bckgrnd">
+            <div class="col-4 bckgrnd">
                 SEMINARS & CERTIFICATES
             </div>
-            <div class="col-8">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
+            <div class="col-8 bckgrnd">
+                <ul class="list-group list-group-flush bckgrnd">
+                    <li class="list-group-item bckgrnd">
                         <ul class="list-group list-group-horizontal">
                             <li class="list-group-item">2021</li>
                             <li class="list-group-item">GIT Training</li>
                         </ul>
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bckgrnd">
                         <ul class="list-group list-group-horizontal">
                             <li class="list-group-item">2021</li>
                             <li class="list-group-item">JAVA</li>
                         </ul>
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bckgrnd">
                         <ul class="list-group list-group-horizontal">
                             <li class="list-group-item">2021</li>
                             <li class="list-group-item">HTML-CSS</li>
                         </ul>
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bckgrnd">
                         <ul class="list-group list-group-horizontal">
                             <li class="list-group-item">2020</li>
                             <li class="list-group-item">Matlab Onramp</li>
                         </ul>
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bckgrnd">
                         <ul class="list-group list-group-horizontal">
                             <li class="list-group-item">2020</li>
                             <li class="list-group-item">MATLAB Fundamentals</li>
@@ -374,8 +371,7 @@
             </div>
         </div>
 
-        <br>
-        <hr><br>
+        <div class="mustBeBlok"></div>
 
         <!-- REFERENCES  -->
         <div class="references row">
@@ -398,61 +394,61 @@
             </div>
         </div>
 
-        <br>
-        <hr><br>
+        <div class="mustBeBlok"></div>
 
         <!-- SITE & INTERESTS -->
-        <div class="site row">
-            <div class="col-4">SITE & INTERESTS</div>
-            <div class="col-8">
-                <div class="row">
+        <div class="site row bckgrnd2">
+            <div class="col-4 bckgrnd2">SITE & INTERESTS</div>
+            <div class="col-8 bckgrnd2">
+                <div class="row bckgrnd2">
 
-                    <div class="col-9">
-                        <div class="interest">
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Coding</li>
-                                <li class="list-group-item">Developing and playing games</li>
-                                <li class="list-group-item">Dealing with artificial intelligence</li>
-                                <li class="list-group-item">Optimization</li>
-                                <li class="list-group-item">Listening to music and discovering new music genres</li>
-                                <li class="list-group-item">Painting and designing</li>
+                    <div class="col-9 bckgrnd2">
+                        <div class="interest bckgrnd2">
+                            <ul class="list-group list-group-flush bckgrnd2">
+                                <li class="bckgrnd2 list-group-item">Coding</li>
+                                <li class="bckgrnd2 list-group-item">Developing and playing games</li>
+                                <li class="bckgrnd2 list-group-item">Dealing with artificial intelligence</li>
+                                <li class="bckgrnd2 list-group-item">Optimization</li>
+                                <li class="bckgrnd2 list-group-item">Listening to music and discovering new music genres
+                                </li>
+                                <li class="bckgrnd2 list-group-item">Painting and designing</li>
                             </ul>
                         </div>
                     </div>
 
-                    <div class="col-3">
-                        <div class="sites">
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
+                    <div class="col-3 bckgrnd2">
+                        <div class="sites bckgrnd2">
+                            <ul class="list-group list-group-flush bckgrnd2">
+                                <li class="bckgrnd2 list-group-item">
                                     <!-- Facebook Icon -->
-                                    <a class="link-dark" target="_blank" href="https://www.facebook.com/mrkacmaz"><svg
+                                    <a class="link-light" target="_blank" href="https://www.facebook.com/mrkacmaz"><svg
                                             xmlns="http://www.w3.org/2000/svg" width="36" height="36"
                                             fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                                             <path
                                                 d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
                                         </svg></a>
                                 </li>
-                                <li class="list-group-item">
+                                <li class="bckgrnd2 list-group-item">
                                     <!-- Github Icon -->
-                                    <a class="link-dark" href="https://github.com/MrKacmaz" target="_blank"><svg
+                                    <a class="link-light" href="https://github.com/MrKacmaz" target="_blank"><svg
                                             xmlns="http://www.w3.org/2000/svg" width="36" height="36"
                                             fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                                             <path
                                                 d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
                                         </svg></a>
                                 </li>
-                                <li class="list-group-item">
+                                <li class="bckgrnd2 list-group-item">
                                     <!-- LinkedIn Icon -->
-                                    <a class="link-dark" href="https://www.linkedin.com/in/alperen-kacmaz-2202/"
+                                    <a class="link-light" href="https://www.linkedin.com/in/alperen-kacmaz-2202/"
                                         target="_blank"><svg F xmlns="http://www.w3.org/2000/svg" width="36" height="36"
                                             fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                                             <path
                                                 d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z" />
                                         </svg></a>
                                 </li>
-                                <li class="list-group-item">
+                                <li class="bckgrnd2 list-group-item">
                                     <!-- Instagram Icon -->
-                                    <a class="link-dark" href=""><svg xmlns="http://www.w3.org/2000/svg" width="36"
+                                    <a class="link-light" href=""><svg xmlns="http://www.w3.org/2000/svg" width="36"
                                             height="36" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
                                             <path
                                                 d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
